--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@formkit/vue": "^1.6.9",
     "@tailwindcss/vite": "^4.1.3",
     "tailwindcss": "^4.1.3",
     "vue": "^3.5.13",
